Charmhub migration for stable/train (bionic-only)
This is the main patch for the migration of the stable/21.10
charm to charmhub for the stable/train branch (train track on
charmhub).  This patch initially supports bionic from queens
to train, and does not support ussuri.  It supports upgrades
from bionic-queens to bionic-train (with each intermediate
step needed).  Crucially it does NOT set a default
openstack-origin, which means installing train/stable
without specifying the openstack-origin will result in a
bionic-queens installation.  This is intentional as the branch
covers queens to train.

Change-Id: I3c178a52b7b0111400ac0b15131235189026ec34

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -1,53 +1,15 @@
 charm_name: neutron-gateway
 
-# NOTE: the OVN migration test runs at the end of a regular gate check and adds
-# no more than 5-10 minutes to each job. We want this to run from focal-ussuri
-# and onwards as that is the point where we recomend our users to migrate from
-# OVS to OVN.
-#
 smoke_bundles:
-  - migrate-ovn: focal-ussuri
+  - bionic-train
 
 gate_bundles:
-  - migrate-ovn: groovy-victoria
-  - migrate-ovn: focal-wallaby
-  - migrate-ovn: focal-victoria
-  - migrate-ovn: focal-ussuri
-  - bionic-ussuri
   - bionic-train
   - bionic-stein
-  - bionic-queens
-  - xenial-mitaka
-
-dev_bundles:
-  - trusty-mitaka
-  - xenial-ocata
-  - xenial-pike
-  - xenial-queens
   - bionic-rocky
-  - migrate-ovn: focal-xena
-  - migrate-ovn: hirsute-wallaby
-  - migrate-ovn: impish-xena
+  - bionic-queens
 
-target_deploy_status:
-  neutron-api-plugin-ovn:
-    # NOTE(lourot): at first we deploy a bundle in which this subordinate charm
-    # isn't related to anything, so it has no unit. It will become related and
-    # receive units later as part of OVSOVNMigrationTest.
-    num-expected-units: 0
-    workload-status: waiting
-  ovn-chassis:
-    workload-status: maintenance
-    workload-status-message-prefix: "Paused. Use 'resume' action to resume normal service."
-  ovn-dedicated-chassis:
-    workload-status: maintenance
-    workload-status-message-prefix: "Paused. Use 'resume' action to resume normal service."
-  ovn-central:
-    workload-status: waiting
-    workload-status-message-prefix: "'ovsdb-peer' incomplete, 'certificates' awaiting server certificate data"
-  vault:
-    workload-status: blocked
-    workload-status-message-prefix: Vault needs to be initialized
+dev_bundles: []
 
 configure:
   - zaza.openstack.charm_tests.glance.setup.add_lts_image
@@ -55,14 +17,6 @@ configure:
   - zaza.openstack.charm_tests.nova.setup.create_flavors
   - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
   - zaza.openstack.charm_tests.keystone.setup.add_demo_user
-  - migrate-ovn:
-    - zaza.openstack.charm_tests.vault.setup.auto_initialize_no_validation
-    - zaza.openstack.charm_tests.glance.setup.add_lts_image
-    - zaza.openstack.charm_tests.neutron.setup.basic_overcloud_network
-    - zaza.openstack.charm_tests.nova.setup.create_flavors
-    - zaza.openstack.charm_tests.nova.setup.manage_ssh_key
-    - zaza.openstack.charm_tests.keystone.setup.add_demo_user
-    - zaza.openstack.charm_tests.ovn.setup.pre_migration_configuration
 
 configure_options:
   configure_gateway_ext_port_use_juju_wait: false
@@ -75,22 +29,10 @@ tests:
   - zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest
   - zaza.openstack.charm_tests.neutron.tests.NeutronOvsVsctlTest
   - zaza.openstack.charm_tests.neutron.tests.NeutronBridgePortMappingTest
-  - migrate-ovn:
-    - zaza.openstack.charm_tests.neutron.tests.NeutronGatewayDeferredRestartTest
-    - zaza.openstack.charm_tests.neutron.tests.NeutronGatewayTest
-    - zaza.openstack.charm_tests.neutron.tests.NeutronGatewayShowActionsTest
-    - zaza.openstack.charm_tests.neutron.tests.SecurityTest
-    - zaza.openstack.charm_tests.neutron.tests.NeutronOvsVsctlTest
-    - zaza.openstack.charm_tests.neutron.tests.NeutronBridgePortMappingTest
-    - zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest
-    - zaza.openstack.charm_tests.ovn.tests.OVSOVNMigrationTest
-    - zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest
 
 tests_options:
   # NOTE: This allows us to run the NeutronNetworkingTest multiple times while
   # reusing the instances created for the first run. This both saves time and
   # allows verifying instances survive a SDN migration.
   zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest.test_instances_have_networking.run_resource_cleanup: false
-  force_deploy:
-    - groovy-victoria
-    - impish-xena
+  force_deploy: []
