--- a/tests/bundles/jammy-yoga.yaml
+++ b/tests/bundles/jammy-yoga.yaml
@@ -31,19 +31,19 @@ applications:
 
   neutron-api-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   keystone-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   nova-cloud-controller-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   glance-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   placement-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
 
   mysql-innodb-cluster:
     charm: ch:mysql-innodb-cluster
@@ -54,7 +54,7 @@ applications:
       - '0'
       - '1'
       - '2'
-    channel: latest/edge
+    channel: 8.0/edge
 
   rabbitmq-server:
     charm: ch:rabbitmq-server
@@ -64,7 +64,7 @@ applications:
       source: *openstack-origin
     to:
       - '3'
-    channel: latest/edge
+    channel: 3.9/edge
 
   neutron-api:
     charm: ch:neutron-api
@@ -78,7 +78,7 @@ applications:
       enable-qos: true
     to:
       - '4'
-    channel: latest/edge
+    channel: zed/edge
 
   keystone:
     charm: ch:keystone
@@ -87,7 +87,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '5'
-    channel: latest/edge
+    channel: zed/edge
 
   glance:
     charm: ch:glance
@@ -96,11 +96,11 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '6'
-    channel: latest/edge
+    channel: zed/edge
 
   neutron-openvswitch:
     charm: ch:neutron-openvswitch
-    channel: latest/edge
+    channel: zed/edge
   neutron-gateway:
     charm: ../../neutron-gateway.charm
     num_units: 1
@@ -120,7 +120,7 @@ applications:
       # NOTE: We deliberately colocate the ovn-dedicated-chassis with the
       # neutron-gateway for migration test purposes.
       - '7'
-    channel: latest/edge
+    channel: 22.09/edge
 
   nova-cloud-controller:
     charm: ch:nova-cloud-controller
@@ -130,7 +130,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '8'
-    channel: latest/edge
+    channel: zed/edge
 
   nova-compute:
     charm: ch:nova-compute
@@ -140,7 +140,7 @@ applications:
     to:
       - '9'
       - '10'
-    channel: latest/edge
+    channel: zed/edge
 
   placement:
     charm: ch:placement
@@ -149,17 +149,17 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '11'
-    channel: latest/edge
+    channel: zed/edge
 
   vault-mysql-router:
     charm: ch:mysql-router
-    channel: latest/edge
+    channel: 8.0/edge
   vault:
     charm: ch:vault
     num_units: 1
     to:
       - '12'
-    channel: latest/edge
+    channel: 1.8/edge
   ovn-central:
     charm: ch:ovn-central
     num_units: 3
@@ -167,16 +167,16 @@ applications:
       source: *openstack-origin
     to:
       - '13'
-    channel: latest/edge
+    channel: 22.09/edge
   neutron-api-plugin-ovn:
     charm: ch:neutron-api-plugin-ovn
-    channel: latest/edge
+    channel: zed/edge
   ovn-chassis:
     charm: ch:ovn-chassis
     options:
       # start new units paused to allow unit by unit OVS to OVN migration
       new-units-paused: true
-    channel: latest/edge
+    channel: 22.09/edge
 
 relations:
 
