Add Antelope support
* sync charm-helpers to classic charms
* change openstack-origin/source default to antelope
* align testing with antelope
* add new antelope bundles
* add antelope bundles to tests.yaml
* add antelope tests to osci.yaml and .zuul.yaml
* update build-on and run-on bases

Change-Id: Id93b0ee0999c7a23ef34e68646b03d910816c655

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -6,15 +6,15 @@ charm_name: neutron-gateway
 # OVS to OVN.
 #
 smoke_bundles:
-  - migrate-ovn: jammy-yoga
+  - migrate-ovn: jammy-zed
 
 gate_bundles:
-  - migrate-ovn: jammy-yoga
+  - migrate-ovn: jammy-zed
 
 dev_bundles:
-  - migrate-ovn: jammy-yoga
-  - migrate-ovn: jammy-zed
+  - migrate-ovn: jammy-antelope
   - migrate-ovn: kinetic-zed
+  - migrate-ovn: lunar-antelope
 
 target_deploy_status:
   neutron-api-plugin-ovn:
@@ -81,3 +81,4 @@ tests_options:
   zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest.test_instances_have_networking.run_resource_cleanup: false
   force_deploy:
     - kinetic-zed
+    - lunar-antelope
