Add docs key and point at Discourse
Add the 'docs' key and point it at a Discourse topic
previously populated with the charm's README contents.

When the new charm revision is released to the Charmhub,
this Discourse-based content will be displayed there. In
the absense of the this new key, the Charmhub's default
behaviour is to display the value of the charm's
'description' key.

Change-Id: I4ab7cd110208816df38c5c70736b69930bcfc086

--- a/metadata.yaml
+++ b/metadata.yaml
@@ -13,6 +13,7 @@ description: |
   .
   This charm provides central Neutron networking services as part
   of a Neutron based OpenStack deployment
+docs: https://discourse.charmhub.io/t/neutron-gateway-docs-index/11000
 tags:
 - openstack
 series:
