Add 2023.2 Bobcat support
* sync charm-helpers to classic charms
* change openstack-origin/source default to bobcat
* add mantic to metadata series
* align testing with bobcat
* add new bobcat bundles
* add bobcat bundles to tests.yaml
* add bobcat tests to osci.yaml
* update build-on and run-on bases
* drop kinetic
* update charmcraft_channel to 2.x/stable

Change-Id: I449a35e6ba7783e53fd21231dfa4236fbb31b7ef

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -6,14 +6,15 @@ charm_name: neutron-gateway
 # OVS to OVN.
 #
 smoke_bundles:
-  - migrate-ovn: jammy-zed
+  - migrate-ovn: jammy-antelope
 
 gate_bundles:
-  - migrate-ovn: jammy-zed
+  - migrate-ovn: jammy-antelope
 
 dev_bundles:
-  - migrate-ovn: jammy-antelope
+  - migrate-ovn: jammy-bobcat
   - migrate-ovn: lunar-antelope
+  - migrate-ovn: mantic-bobcat
 
 target_deploy_status:
   neutron-api-plugin-ovn:
@@ -80,3 +81,4 @@ tests_options:
   zaza.openstack.charm_tests.neutron.tests.NeutronNetworkingTest.test_instances_have_networking.run_resource_cleanup: false
   force_deploy:
     - lunar-antelope
+    - mantic-bobcat
