Fix typo in actions.yaml
There was a typo in actions.yaml for the resume action that was breaking
builds. This change fixes that typo. The charm will build.

Closes-Bug: 2030677
Change-Id: I8c63674a9d0af597da139abf67ba929d39614311

--- a/actions.yaml
+++ b/actions.yaml
@@ -21,7 +21,7 @@ openstack-upgrade:
 pause:
     description: Pause the neutron-gateway unit.
 resume:
-    descrpition: Resume the neutron-gateway unit.
+    description: Resume the neutron-gateway unit.
 security-checklist:
   description: Validate the running configuration against the OpenStack security guides checklist
 restart-services:
