--- a/tests/bundles/jammy-bobcat.yaml
+++ b/tests/bundles/jammy-bobcat.yaml
@@ -74,7 +74,7 @@ applications:
       enable-qos: true
     to:
       - '4'
-    channel: latest/edge
+    channel: 2024.1/edge
 
   keystone:
     charm: ch:keystone
@@ -83,7 +83,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '5'
-    channel: latest/edge
+    channel: 2024.1/edge
 
   glance:
     charm: ch:glance
@@ -92,11 +92,11 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '6'
-    channel: latest/edge
+    channel: 2024.1/edge
 
   neutron-openvswitch:
     charm: ch:neutron-openvswitch
-    channel: latest/edge
+    channel: 2024.1/edge
   neutron-gateway:
     charm: ../../neutron-gateway.charm
     num_units: 1
@@ -126,7 +126,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '8'
-    channel: latest/edge
+    channel: 2024.1/edge
 
   nova-compute:
     charm: ch:nova-compute
@@ -136,7 +136,7 @@ applications:
     to:
       - '9'
       - '10'
-    channel: latest/edge
+    channel: 2024.1/edge
 
   placement:
     charm: ch:placement
@@ -145,7 +145,7 @@ applications:
       openstack-origin: *openstack-origin
     to:
       - '11'
-    channel: latest/edge
+    channel: 2024.1/edge
 
   vault-mysql-router:
     charm: ch:mysql-router
@@ -166,7 +166,7 @@ applications:
     channel: latest/edge
   neutron-api-plugin-ovn:
     charm: ch:neutron-api-plugin-ovn
-    channel: latest/edge
+    channel: 2024.1/edge
   ovn-chassis:
     charm: ch:ovn-chassis
     options:
