Stable changes for stable/2024.1 (caracal) branch
This patch converts stable/2024.1 into a stable maintenance branch. It:

- modifies .gitreview to point to stable/2024.1
- switches (test-)requirements*.txt -> (test-)requirements*.in
  for pip-compile usage.
- creates (test-)requirements-py*.txt from *.in using pip-compile for
  the relevant python version.
- Updates bundles to point to ceph/edge and 24.04/edge for ceph and
  OVN charms.
- Adds build.lock file to the reactive charms.
- Syncs charm-helpers for classic charms.
- Locks requirements.txt from requirements.in for ops machine charms.
- Locks charms.openstack, zaza, zaza-openstack-tests, charm-helpers to
  stable branches.

Change-Id: I81e2029b91cbbf0763f55e023eee05f559e36e19

--- a/tests/bundles/jammy-antelope.yaml
+++ b/tests/bundles/jammy-antelope.yaml
@@ -116,7 +116,7 @@ applications:
       # NOTE: We deliberately colocate the ovn-dedicated-chassis with the
       # neutron-gateway for migration test purposes.
       - '7'
-    channel: latest/edge
+    channel: 24.03/edge
 
   nova-cloud-controller:
     charm: ch:nova-cloud-controller
@@ -163,7 +163,7 @@ applications:
       source: *openstack-origin
     to:
       - '13'
-    channel: latest/edge
+    channel: 24.03/edge
   neutron-api-plugin-ovn:
     charm: ch:neutron-api-plugin-ovn
     channel: 2024.1/edge
@@ -172,7 +172,7 @@ applications:
     options:
       # start new units paused to allow unit by unit OVS to OVN migration
       new-units-paused: true
-    channel: latest/edge
+    channel: 24.03/edge
 
 relations:
 
